# soren-superman

./: .gitignore  LICENSE  NOTICE  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/images/: README.md
docs/superpowers/plans/: 2026-05-18-soren-superman-branding.md  2026-05-18-windows-startup.md  2026-05-19-soren-superman-identity.md
docs/superpowers/specs/: 2026-05-18-soren-superman-branding-design.md  2026-05-18-windows-startup-design.md  2026-05-19-soren-superman-identity-design.md
public/file-icons/: manifest.json
scripts/: build-macos-dmg.ts  check-branding.ps1  check-identity.ps1  check-windows-subsystem.ps1  generate-file-icons.ts  set-version.ts
src/: AllDiffsView.tsx  App.tsx  ChangesPanel.tsx  CodeEditor.tsx  DiffEditor.tsx  EditorPanel.tsx  FileTree.tsx  GitBranchRefsPanel.tsx  GitCommitGraphPanel.tsx  MainLayout.tsx  Terminal.tsx  WindowControls.tsx  WorkspaceContext.tsx  WorkspaceGate.tsx  agentPresets.ts  diffPresentation.ts  fileIcons.ts  filePreview.ts  fileTreeDnd.ts  fileTreeOps.ts  fileTreeTypes.ts  fileTreeUtils.ts  gitApi.ts  gitTypes.ts  index.css  platform.ts  useGitBranchRefs.ts  useGitChanges.ts  useGitCommitGraph.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: git_backend.rs  lib.rs  main.rs
src/components/ui/: context-menu.tsx  dialog.tsx  scroll-area.tsx  tabs.tsx
