[package]
name = "supremum"
version = "0.0.1"
description = "Simple, lightweight, but powerful AI code editor for the AI era"
authors = ["htcmax"]
edition = "2021"
license = "GPL-3.0-only"

[lib]
name = "mini_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "Supremum"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
base64 = "0.22"
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
raw-window-handle = "0.6"
